--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.7",
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.2.14",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.2",
@@ -23,47 +23,46 @@
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.2.2",
-    "@angular/service-worker": "^7.2.2",
-    "@ionic-native/calendar": "^5.10.0",
-    "@ionic-native/camera": "^5.10.0",
-    "@ionic-native/core": "^5.10.0",
-    "@ionic-native/document-viewer": "^5.10.0",
-    "@ionic-native/file": "^5.10.0",
-    "@ionic-native/file-opener": "^5.10.0",
-    "@ionic-native/file-transfer": "^5.10.0",
-    "@ionic-native/geolocation": "^5.10.0",
-    "@ionic-native/splash-screen": "^5.10.0",
-    "@ionic-native/status-bar": "^5.10.0",
-    "@ionic/angular": "^4.6.2",
+    "@angular/service-worker": "^8.1.2",
+    "@ionic-native/calendar": "^5.5.1",
+    "@ionic-native/camera": "^5.5.1",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/document-viewer": "^5.5.1",
+    "@ionic-native/file": "^5.6.0",
+    "@ionic-native/file-opener": "^5.6.0",
+    "@ionic-native/file-transfer": "^5.5.1",
+    "@ionic-native/geolocation": "^5.5.1",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic/angular": "^4.1.0",
     "@ionic/storage": "^2.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.x.x",
     "angular-oauth2-oidc": "^5.0.2",
     "blob-util": "^2.0.2",
-    "bootstrap-datepicker": "^1.9.0",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-calendar": "^5.1.4",
-    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-document-viewer": "0.9.10",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-file-opener2": "2.2.0",
     "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.1.1",
-    "cordova-plugin-splashscreen": "^5.0.3",
-    "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "core-js": "^2.6.9",
+    "cordova-plugin-ionic-webview": "^4.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^3.2.1",
+    "core-js": "^2.5.4",
     "ctoc_timezone": "^1.0.2",
     "keycloak-admin": "^1.12.0",
     "keycloak-admin-client": "^0.12.0",
     "moment": "^2.24.0",
-    "ngx-logger": "^3.4.6",
-    "pdfmake": "^0.1.57",
+    "ngx-logger": "^3.3.13",
+    "pdfmake": "^0.1.56",
     "rxjs": "~6.5.1",
-    "tslib": "^1.10.0",
+    "tslib": "^1.9.0",
     "xdata": "^2.1.17",
     "zone.js": "~0.8.29"
   },
@@ -77,9 +76,9 @@
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
+    "@types/node": "~10.14.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.14.13",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -89,7 +88,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-node": "^8.1.1",
+    "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
@@ -100,7 +99,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-calendar": {},
       "cordova-plugin-file": {},
@@ -108,7 +109,8 @@
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-file-opener2": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android",
