--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-calendar": "^5.1.4",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-document-viewer": "0.9.10",
-    "cordova-plugin-file": "6.0.1",
-    "cordova-plugin-file-opener2": "2.2.0",
-    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-document-viewer": "^0.9.10",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-opener2": "^2.2.0",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.0.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "cordova-sqlite-storage": "^3.2.1",
     "core-js": "^2.5.4",
     "ctoc_timezone": "^1.0.2",
